# OpenGL-Project

./: .gitignore  CMakeLists.txt  README.md  test  test.cpp
DSA PRACTICE/: 2sum  2sum.cpp  IfArraySorted  IfArraySorted.cpp  LargestElemINArray  LargestElemINArray.cpp  LeftRotateArrayOnePlace  LeftRotateArrayOnePlace.cpp  LinearSearch  LinearSearch.cpp  MaximumConsecOnes  MaximumConsecOnes.cpp  MissingNumbers  MissingNumbers.cpp  MoveAllZerosToEnd  MoveAllZerosToEnd.cpp  RemoveDuplicate  RemoveDuplicate.cpp  SecondLargestElem  SecondLargestElem.cpp  UnionOf2SortedArrays  UnionOf2SortedArrays.cpp
src/: Camera.cpp  EBO.cpp  Mesh.cpp  VAO.cpp  VBO.cpp  glad.c  glad.h  main.cpp  shaderClass.cpp
src/HeaderFiles/: Camera.h  EBO.h  Mesh.h  Texture.h  VAO.h  VBO.h  shaderClass.h
src/Shaders/: default.frag  default.vert
